--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/record_secret_password.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/record_secret_password.yml
@@ -6,6 +6,19 @@
   set_fact:
     secrets: "{{ secrets | default([]) | combine({ db_username: new_password }) }}"
 
+- name: Record Secret Tags
+  shell: |
+    export PATH=$PATH:/usr/local/bin
+    TAGS=$(aws secretsmanager describe-secret --secret-id {{ secret_name }} --region eu-west-2 --query "Tags[]")
+    echo $TAGS
+  register: tags
+
+- name: Populate Secret Tags Dictionary
+  set_fact:
+      tag_dict: "{{ tag_dict | default({}) | combine( {item.Key: item.Value} ) }}"
+  with_items:
+      - "{{ tags.stdout }}"
+
 # There is a potential for this task to fail due to AWS throttling, so allow it to retry a few times if needed
 - name: Record New Password in Secret Manager
   community.aws.aws_secret:
@@ -14,6 +27,7 @@
     secret_type: "string"
     secret: "{{ secrets | to_json }}"
     region: "{{ region }}"
+    tags: "{{ tag_dict }}"
   retries: 4
   delay: "{{ 60 | random }}"
   throttle: 1
