No need to replace

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_asm_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_asm_passwords.yml
@@ -2,4 +2,4 @@
 - name: Set ASM Passwords in ASM Instance
   script: set_asm_password.sh
   environment:
-    SECRET_NAME: "{{ secret_name | replace('dba','application') }}"
+    SECRET_NAME: "{{ secret_name }}"
