Use application secret manager

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_application_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_application_passwords.yml
@@ -24,6 +24,8 @@
     # There is a potential for this task to fail due to AWS throttling, so allow it to retry a few times if needed
     - name: Record New Database Password for {{ db_username }} in Secret Manager
       include_tasks: record_secret_password.yml
+      vars:
+        secret_name: "{{ secret_name | replace('dba','application') }}"
 
     # We only need to change the password in the primary database
     - name: Set Password for {{ db_username }} in Database
@@ -31,7 +33,7 @@
       register: set_db_password
       environment:
         DB_USERNAME: "{{ db_username }}"
-        SECRET_NAME: "{{ secret_name }}"
+        SECRET_NAME: "{{ secret_name | replace('dba','application') }}"
       vars:
         ansible_aws_ssm_timeout: 60
 
