Standard Name Ordering

--- a/.github/workflows/oracle-db-oem-agent-setup.yml
+++ b/.github/workflows/oracle-db-oem-agent-setup.yml
@@ -1,4 +1,4 @@
-name: "Oracle: Setup Oracle OEM Agent"
+name: "Oracle: OEM Agent Setup"
 run-name: "Oracle: ${{ format('{0}_{1}', github.event.inputs.TargetEnvironment, github.event.inputs.TargetHost) }}_oem_agent_setup"
 on:
   push:
