--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/record_secret_password.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/record_secret_password.yml
@@ -1,10 +1,16 @@
+# - name: Retrieve All Passwords
+#   set_fact:
+#     secrets: "{{ lookup('amazon.aws.aws_secret', '{{ secret_name }}', region=region) }}"
+
 - name: Retrieve All Passwords
-  set_fact:
-    secrets: "{{ lookup('amazon.aws.aws_secret', '{{ secret_name }}', region=region) }}"
+  shell: |
+    export PATH=$PATH:/usr/local/bin
+    echo $(aws secretsmanager get-secret-value --secret-id {{ secret_name }} --region eu-west-2  --query SecretString --output text)
+  register: getsecrets
 
 - name: Combine New Password
   set_fact:
-    secrets: "{{ secrets | default([]) | combine({ db_username: new_password }) }}"
+    secrets: "{{ getsecrets.stdout | from_json | default([]) | combine({ db_username: new_password }) }}"
 
 - name: Record Secret Tags
   shell: |
@@ -15,9 +21,9 @@
 
 - name: Populate Secret Tags Dictionary
   set_fact:
-      tag_dict: "{{ tag_dict | default({}) | combine( {item.Key: item.Value} ) }}"
+    tag_dict: "{{ tag_dict | default({}) | combine( {item.Key: item.Value} ) }}"
   with_items:
-      - "{{ tags.stdout }}"
+    - "{{ tags.stdout }}"
 
 # There is a potential for this task to fail due to AWS throttling, so allow it to retry a few times if needed
 - name: Record New Password in Secret Manager
