--- a/playbooks/alfresco_wallet/alfresco_wallet/tasks/main.yml
+++ b/playbooks/alfresco_wallet/alfresco_wallet/tasks/main.yml
@@ -140,8 +140,14 @@
       when: ( get_alfresco_wallet_location.stdout | trim ) != ( wallet_dir | trim )
 
     # We will use the System Password as the Wallet Password
-    - name: Get system password from SSM
-      shell: . ~/.bash_profile && aws ssm get-parameter --name /{{ environment_name }}/{{ project_name}}/delius-database/db/oradb_system_password --region {{ region }} --output text --with-decryption --query Parameter.Value
+    - name: Get system password from Secrets Manager
+      shell: |
+        export PATH=$PATH:/usr/local/bin
+        INSTANCEID=$(wget -q -O - http://169.254.169.254/latest/meta-data/instance-id)
+        ENVIRONMENT_NAME=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=environment-name"  --query "Tags[].Value" --output text)
+        DELIUS_ENVIRONMENT=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=delius-environment"  --query "Tags[].Value" --output text)
+        APPLICATION=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=application"  --query "Tags[].Value" --output text | sed 's/-core//')
+        aws secretsmanager get-secret-value --secret-id ${ENVIRONMENT_NAME}-${DELIUS_ENVIRONMENT}-${APPLICATION}-dba-passwords --region {{ region }} --query SecretString --output text| jq -r .system
       register: oradb_system_password
       no_log: true
       changed_when: false
