--- a/playbooks/delius_gdpr/playbook.yml
+++ b/playbooks/delius_gdpr/playbook.yml
@@ -1,6 +1,12 @@
 ---
-- name: Get gdpr_pool password from ssm
-  shell: . ~/.bash_profile && aws ssm get-parameters --region {{ region }} --with-decryption --name /{{ environment_name }}/{{ project_name }}/delius-database/db/gdpr_pool_password | jq -r '.Parameters[].Value'
+- name: Get gdpr_pool password from secrets manager
+  shell: |
+    export PATH=$PATH:/usr/local/bin
+    INSTANCEID=$(wget -q -O - http://169.254.169.254/latest/meta-data/instance-id)
+    ENVIRONMENT_NAME=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=environment-name"  --query "Tags[].Value" --output text)
+    DELIUS_ENVIRONMENT=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=delius-environment"  --query "Tags[].Value" --output text)
+    APPLICATION=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=application"  --query "Tags[].Value" --output text | sed 's/-core//')
+    aws secretsmanager get-secret-value --secret-id ${ENVIRONMENT_NAME}-${DELIUS_ENVIRONMENT}-${APPLICATION}-application-passwords --region {{ region }} --query SecretString --output text| jq -r .gdpr_pool
   register: gdpr_pool_password
   changed_when: false
   no_log: true
