--- a/playbooks/oracle_dms_setup/dms_setup/tasks/create-dms-user.yml
+++ b/playbooks/oracle_dms_setup/dms_setup/tasks/create-dms-user.yml
@@ -1,10 +1,10 @@
 - name: Include Variables for {{ dms_user_application }} Setup
   include_vars: "{{ dms_user_application }}.yml"
 
-- name: Get {{ dms_user }} password from ssm
+- name: Get {{ dms_user }} password from secret manager
   shell: |
     export PATH=$PATH:/usr/local/bin
-    aws ssm get-parameters --region {{ region }} --with-decryption --name /{{ environment_name }}/{{ project_name }}/delius-database/db/{{ dms_user }}_password | jq -r '.Parameters[].Value'
+    aws secretsmanager get-secret-value --secret-id {{ secret_name }} --region {{ region }} --query SecretString --output text| jq -r .{{ dms_user }}
   changed_when: false
   register: "dms_password"
   #no_log: true
