--- a/playbooks/oracle_snapshot_standby/convert_to_physical_standby.yml
+++ b/playbooks/oracle_snapshot_standby/convert_to_physical_standby.yml
@@ -24,7 +24,12 @@
     - name: Convert snapshot standby database to physical standby database
       shell: |
         . ~/.bash_profile
-        SYS_PASSWORD="{{ lookup('aws_ssm', '/{{ environment_name }}/{{ project_name }}/delius-database/db/oradb_sys_password', region=region ) }}"
+        export PATH=$PATH:/usr/local/bin
+        INSTANCEID=$(wget -q -O - http://169.254.169.254/latest/meta-data/instance-id)
+        ENVIRONMENT_NAME=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=environment-name"  --query "Tags[].Value" --output text)
+        DELIUS_ENVIRONMENT=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=delius-environment"  --query "Tags[].Value" --output text)
+        APPLICATION=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=application"  --query "Tags[].Value" --output text)
+        SYS_PASSWORD=$(aws secretsmanager get-secret-value --secret-id ${ENVIRONMENT_NAME}-${DELIUS_ENVIRONMENT}-${APPLICATION}-dba-passwords --region {{ region }} --query SecretString --output text| jq -r .sys) 
         dgmgrl / << EOF
         connect sys/${SYS_PASSWORD}@{{ primary_database }};
         convert database '{{ database_standby_unique | lower }}' to physical standby;
