--- a/.github/workflows/oracle-db-oem-agent-setup.yml
+++ b/.github/workflows/oracle-db-oem-agent-setup.yml
@@ -118,4 +118,4 @@ jobs:
       - name: Start Set Parameters
         run: | 
             export ANSIBLE_CONFIG=$ansible_config
-            $command -i $inventory -e target_host=${{needs.build_target_name.outputs.TargetHost}}
+            $command -i $inventory -e target=${{needs.build_target_name.outputs.TargetHost}}
