--- a/.github/workflows/oracle-db-oem-agent-setup.yml
+++ b/.github/workflows/oracle-db-oem-agent-setup.yml
@@ -99,6 +99,7 @@ jobs:
           sparse-checkout-cone-mode: false
           sparse-checkout: |
                ansible/roles/oracle-oem-agent-setup
+               ansible/roles/get-ec2-facts
                ansible/site.yml
           path: operations
           ref: ${{ github.event.inputs.SourceConfigVersion }}
