Add Secrets Manager Role

--- a/.github/workflows/oracle-db-oem-agent-setup.yml
+++ b/.github/workflows/oracle-db-oem-agent-setup.yml
@@ -100,6 +100,7 @@ jobs:
           sparse-checkout: |
                ansible/roles/oracle-oem-agent-setup
                ansible/roles/get-ec2-facts
+               ansible/roles/secretsmanager-passwords
                ansible/site.yml
           path: operations
           ref: ${{ github.event.inputs.SourceConfigVersion }}
