Import OEM Rule Set for Delius

--- a/playbooks/delius_oem_rules_setup/delius_oem_rules_setup/tasks/import_incident_rule_set.yml
+++ b/playbooks/delius_oem_rules_setup/delius_oem_rules_setup/tasks/import_incident_rule_set.yml
@@ -13,7 +13,7 @@
         - import_incident_rule_set.sh
 
     - name: Copy Incident Rule definition
-      template:
+      copy:
         src: rule_set.xml
         dest: "{{ stage }}/rule_set.xml"
         mode: "0600"
