--- a/.github/workflows/oracle-db-oem-rules-setup.yml
+++ b/.github/workflows/oracle-db-oem-rules-setup.yml
@@ -1,5 +1,5 @@
 name: "Oracle: OEM Rules Setup"
-run-name: "Oracle: ${{ format('{0}_{1}', github.event.inputs.TargetEnvironment, github.event.inputs.TargetHost) }}_oem_rules_setup"
+run-name: "Oracle: ${{ format('{0}', github.event.inputs.TargetEnvironment) }}_oem_rules_setup"
 on:
   workflow_dispatch:
     inputs:
@@ -14,24 +14,6 @@ on:
           - "delius-core-stage"
           - "delius-core-pre-prod"
           - "delius-core-prod"
-      TargetHost:
-        description: "Database target host"
-        required: true
-        type: choice
-        options:
-          - "delius_primarydb"
-          - "delius_standbydb1"
-          - "delius_standbydb2"
-          - "delius_dbs"
-          - "mis_primarydb"
-          - "mis_standbydb1"
-          - "mis_dbs"
-          - "misboe_primarydb"
-          - "misboe_standbydb1"
-          - "misboe_dbs"
-          - "misdsd_primarydb"
-          - "misdsd_standbydb1"
-          - "misdsd_dbs"
       ReplaceExistingRuleSet:
         description: "Replace Existing Rule Set if it Exists?"
         type: boolean
@@ -71,7 +53,7 @@ jobs:
     steps:
       - name: Prepare Target Name
         id: preparetargetname
-        run: echo TargetHost="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_${{ github.event.inputs.TargetHost }}" >> $GITHUB_OUTPUT
+        run: echo TargetHost="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_delius_primarydb" >> $GITHUB_OUTPUT
   deployment:
     name: oracle-db-oem-rules-setup
     needs: build_target_name
