--- a/.github/workflows/oracle-db-oem-rules-setup.yml
+++ b/.github/workflows/oracle-db-oem-rules-setup.yml
@@ -116,5 +116,6 @@ jobs:
         run: | 
             export ANSIBLE_CONFIG=$ansible_config
             ln -s roles/ansible/roles operations/playbooks/delius_oem_rules_setup/roles
+            ls -l operations/playbooks/delius_oem_rules_setup/roles
             find .
             $command -i $inventory -e target=${{needs.build_target_name.outputs.TargetHost}} -e replace_existing_rule_set=${{ github.event.inputs.ReplaceExistingRuleSet }} ${{ github.event.inputs.VerboseOutput }}
