--- a/.github/workflows/oracle-db-oem-rules-setup.yml
+++ b/.github/workflows/oracle-db-oem-rules-setup.yml
@@ -117,5 +117,8 @@ jobs:
             export ANSIBLE_CONFIG=$ansible_config
             ln -s roles/ansible/roles operations/playbooks/delius_oem_rules_setup/roles
             ls -l operations/playbooks/delius_oem_rules_setup/roles
+            cd operations/playbooks/delius_oem_rules_setup/roles
+            pwd
+            ls -l
             find .
             $command -i $inventory -e target=${{needs.build_target_name.outputs.TargetHost}} -e replace_existing_rule_set=${{ github.event.inputs.ReplaceExistingRuleSet }} ${{ github.event.inputs.VerboseOutput }}
