--- a/.github/workflows/oracle-db-oem-rules-setup.yml
+++ b/.github/workflows/oracle-db-oem-rules-setup.yml
@@ -88,6 +88,7 @@ jobs:
           sparse-checkout: |
                ansible/roles/secretsmanager-passwords
                ansible/roles/get-ec2-facts
+               ansible/roles/get-modernisation-platform-facts
           path: roles
           ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
@@ -115,10 +116,6 @@ jobs:
       - name: Start OEM Rules Setup
         run: | 
             export ANSIBLE_CONFIG=$ansible_config
-            echo $PWD
+            # Link the checked out configuration roles to somewhere Ansible will be able to find them
             ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/delius_oem_rules_setup/roles
-            ls -ld operations/playbooks/delius_oem_rules_setup/roles
-            pwd
-            ls -l
-            find .
             $command -i $inventory -e target=${{needs.build_target_name.outputs.TargetHost}} -e replace_existing_rule_set=${{ github.event.inputs.ReplaceExistingRuleSet }} ${{ github.event.inputs.VerboseOutput }}
