--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/main.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/main.yml
@@ -32,32 +32,29 @@
 # job has failed or is not progressing at a reasonable speed.
 
 # Disable OEM Native Monitoring to avoid noise due to agent / broker connection failures during password changes
-# - name: Disable Monitoring
-# block:
+- name: Disable Monitoring
+  block:
 
-#     - name: Start database monitoring blackout
-#       include_role:
-#          name: oem-blackout
-#          tasks_from: ../oem_blackout.yml
-#       vars:
-#           target: "{{ inventory_hostname }}"
-#           action: "start"
-#           object_type: "all"
-#           blackout: "PASSWORD_ROTATION_{{ environment_name }}"
-#           duration: ""
-#           allow_jobs: false
+    - name: Start database monitoring blackout
+      include_role:
+         name: ../oem_blackout/oem-blackout
+      vars:
+          target: "{{ inventory_hostname }}"
+          action: "start"
+          object_type: "all"
+          blackout: "PASSWORD_ROTATION_{{ environment_name }}"
+          duration: ""
+          allow_jobs: false
 
-#     # Disable OEM Script-Based Monitoring to avoid noise due to agent / broker connection failures during password changes
-#     - name: Temporarily Exclude Target Hosts from Monitoring During Password Changes
-#       include_role:
-#          name: oem-blackout
-#          tasks_from: script_exclusion.yml
-#       vars:
-#           action: "start"
-#           blackout: "PASSWORD_ROTATION_{{ environment_name }}"
-#           engineering_role: "{{ assumed_engineering_role }}"
-#           engineering_env: "{{ bastion_inventory.stdout }}"
-#           duration: 7200
+    # Disable OEM Script-Based Monitoring to avoid noise due to agent / broker connection failures during password changes
+    - name: Temporarily Exclude Target Hosts from Monitoring During Password Changes
+      include_role:
+         name: ../oem_blackout/oem-blackout
+         tasks_from: script_exclusion.yml
+      vars:
+          action: "start"
+          blackout: "PASSWORD_ROTATION_{{ environment_name }}"
+          duration: 7200
 
 - name: Get Primary Database Type And Environment
   set_fact:
@@ -115,7 +112,7 @@
     # Prevent Failover due to problems with password changes by disabling FSFO during password rotation
     - name: Disable Fast Start Failover
       include_role:
-        name: ${GITHUB_WORKSPACE)/operations/playbooks/oracle_ha/build_ha
+        name: ../oracle_ha/build_ha
         tasks_from: set-fsfo-mode.yml
       when:
         - database_primary_sid is defined
@@ -263,34 +260,30 @@
       when:
         - database_primary_sid is defined
 # Restart Monitoring regardless of success of password rotation
-#always:
+  always:
 
-# - name: Re-Enable Monitoring
-#   block:
+  - name: Re-Enable Monitoring
+    block:
 
-#       # Re-Enable OEM Native Monitoring
-#       - name: Stop database monitoring blackout
-#         include_role:
-#            name: oem-blackout
-#            tasks_from: ../oem_blackout.yml
-#         vars:
-#             target: "{{ inventory_hostname }}"
-#             action: "stop"
-#             object_type: "all"
-#             blackout: "PASSWORD_ROTATION_{{ environment_name }}"
+        # Re-Enable OEM Native Monitoring
+        - name: Stop database monitoring blackout
+          include_role:
+            name: ../oem_blackout/oem-blackout
+          vars:
+              target: "{{ inventory_hostname }}"
+              action: "stop"
+              object_type: "all"
+              blackout: "PASSWORD_ROTATION_{{ environment_name }}"
 
-#       # Re-Enable OEM Script-Based Monitoring
-#       # We supply the script path here to allow the script_exclusion.yml file
-#       # to find another script which it calls within the same directory.
-#       # Ideally this would be done using roles instead of supplying a script path,
-#       # but that would require significant changes to existing code.
-#       - name: Un-Exclude Target Hosts from Monitoring During Password Changes
-#         include_role:
-#           name: oem-blackout
-#           tasks_from: script_exclusion.yml
-#         vars:
-#             action: "stop"
-#             blackout: "PASSWORD_ROTATION_{{ environment_name }}"
-#             engineering_role: "{{ assumed_engineering_role }}"
-#             engineering_env: "{{ bastion_inventory.stdout }}"
-#             #exclusion_expiry: "{{ exclude_timeout }}"
+        # Re-Enable OEM Script-Based Monitoring
+        # We supply the script path here to allow the script_exclusion.yml file
+        # to find another script which it calls within the same directory.
+        # Ideally this would be done using roles instead of supplying a script path,
+        # but that would require significant changes to existing code.
+        - name: Un-Exclude Target Hosts from Monitoring During Password Changes
+          include_role:
+            name: ../oem_blackout/oem-blackout
+            tasks_from: script_exclusion.yml
+          vars:
+              action: "stop"
+              blackout: "PASSWORD_ROTATION_{{ environment_name }}"
