--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/rotate_rman_password.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/rotate_rman_password.yml
@@ -5,7 +5,7 @@
 
 - name: Set Existing RMAN Password In Variable
   set_fact:
-    existing_rman_password: "{{ lookup('amazon.aws.aws_secret', '{{ secret_name }}', region='eu-west-2') | from_json | json_query('rman') }}"
+    existing_rman_password: "{{ lookup('amazon.aws.aws_secret', '{{ secret_name }}', region='eu-west-2') | from_json | json_query('rcvcatowner') }}"
 
 - name: Get New Password for RMAN
   include_tasks: ../../all_password_rotation/tasks/create_random_password.yml
