--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_rman_password.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_rman_password.yml
@@ -2,7 +2,7 @@
   block:
     - name: Add Password To RMAN secret dictionary
       set_fact:
-        rman_secretsmanager_passwords: "{{ rman_secretsmanager_passwords |  combine({ 'catalog': { 'users': [{'rman': new_password}] }}, recursive=true) }}"
+        rman_secretsmanager_passwords: "{{ rman_secretsmanager_passwords |  combine({ 'catalog': { 'users': [{'rcvcatowner': new_password}] }}, recursive=true) }}"
 
     - name: Update RMAN Password In Secrets
       import_role:
