Missing double quote

--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -108,7 +108,7 @@ jobs:
 
       - name: Prepare Ansbile OEM Target Host
         id: prepareoemtargethost
-        run: echo TargetOemHost="environment_name_$(echo ${{ github.event.inputs.TargetOemEnvironment }}  | sed 's/-/_/') >> $GITHUB_OUTPUT
+        run: echo TargetOemHost="environment_name_$(echo ${{ github.event.inputs.TargetOemEnvironment }}  | sed 's/-/_/')" >> $GITHUB_OUTPUT
 
       - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
         uses: actions/checkout@v4
