Missing DB_NAME environment var

--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/rotate_rman_password.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/rotate_rman_password.yml
@@ -19,7 +19,7 @@
     - name: Set RMAN Password in Catalog Database
       script: set_rman_password.sh
       environment:
-        DB_NAME: "{{  }}"
+        DB_NAME: "{{ db_configs['RCVCAT']['rcvcat_db_name'] }}"
         SECRET_ID: "{{ rman_secretsmanager_passwords['catalog']['secret'] }}"
 
   when: existing_rman_password != new_password
