Upper case asmsnmp user

--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_passwords.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_passwords.yml
@@ -102,4 +102,4 @@
       environment:
         SYSMAN_PASSWORD: "{{ sysman_password }}"
         ASMSNMP_PASSWORD: >-
-          {{ lookup('amazon.aws.aws_secret', '{{ asm_monitoring_secret_name }}', region='eu-west-2') | from_json | json_query('asmsnmp') if (asm_name.split()[2] == "oem") else lookup('amazon.aws.aws_secret', '{{ secret_environment }}-{{ asm_name.split()[1] }}-{{ asm_name.split()[2] }}-dba-passwords' , region='eu-west-2') | from_json | json_query('asmsnmp') }}
+          {{ lookup('amazon.aws.aws_secret', '{{ asm_monitoring_secret_name }}', region='eu-west-2') | from_json | json_query('ASMSNMP') if (asm_name.split()[2] == "oem") else lookup('amazon.aws.aws_secret', '{{ secret_environment }}-{{ asm_name.split()[1] }}-{{ asm_name.split()[2] }}-dba-passwords' , region='eu-west-2') | from_json | json_query('asmsnmp') }}
